tooling/nargo_cli/tests/snapshots/execution_success/regression_9544/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(c: u64) -> pub u64 {
    if c == 1_u64 {
        if c == 2_u64 {
            c >> c
        } else {
            3_u64
        }
    } else {
        if c == 4_u64 {
            c >> c
        } else {
            5_u64
        }
    }
}
