tooling/nargo_cli/tests/snapshots/execution_success/regression_9544/execute__tests__force_brillig_true_inliner_-9223372036854775808 2.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "c",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 64
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "unsigned",
        "width": 64
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _1",
    "private parameters indices : [_0]",
    "public parameters indices : []",
    "return value indices : [_1]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 0 ]], outputs: [_1]",
    "unconstrained func 0",
    "[Const { destination: Direct(2), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(1), bit_size: Integer(U32), value: 32838 }, Const { destination: Direct(0), bit_size: Integer(U32), value: 3 }, Const { destination: Relative(2), bit_size: Integer(U32), value: 1 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(32836), size_address: Relative(2), offset_address: Relative(3) }, Cast { destination: Direct(32836), source: Direct(32836), bit_size: Integer(U64) }, Mov { destination: Relative(1), source: Direct(32836) }, Call { location: 14 }, Call { location: 15 }, Mov { destination: Direct(32837), source: Relative(1) }, Const { destination: Relative(2), bit_size: Integer(U32), value: 32837 }, Const { destination: Relative(3), bit_size: Integer(U32), value: 1 }, Stop { return_data: HeapVector { pointer: Relative(2), size: Relative(3) } }, Return, Call { location: 46 }, Const { destination: Relative(3), bit_size: Integer(U64), value: 1 }, BinaryIntOp { destination: Relative(4), op: Equals, bit_size: U64, lhs: Relative(1), rhs: Relative(3) }, JumpIf { condition: Relative(4), location: 32 }, Jump { location: 20 }, Const { destination: Relative(4), bit_size: Integer(U64), value: 4 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U64, lhs: Relative(1), rhs: Relative(4) }, JumpIf { condition: Relative(5), location: 27 }, Jump { location: 24 }, Const { destination: Relative(1), bit_size: Integer(U64), value: 5 }, Mov { destination: Relative(3), source: Relative(1) }, Jump { location: 30 }, BinaryIntOp { destination: Relative(4), op: Shr, bit_size: U64, lhs: Relative(1), rhs: Relative(1) }, Mov { destination: Relative(3), source: Relative(4) }, Jump { location: 30 }, Mov { destination: Relative(2), source: Relative(3) }, Jump { location: 44 }, Const { destination: Relative(4), bit_size: Integer(U64), value: 2 }, BinaryIntOp { destination: Relative(5), op: Equals, bit_size: U64, lhs: Relative(1), rhs: Relative(4) }, JumpIf { condition: Relative(5), location: 39 }, Jump { location: 36 }, Const { destination: Relative(1), bit_size: Integer(U64), value: 3 }, Mov { destination: Relative(3), source: Relative(1) }, Jump { location: 42 }, BinaryIntOp { destination: Relative(4), op: Shr, bit_size: U64, lhs: Relative(1), rhs: Relative(1) }, Mov { destination: Relative(3), source: Relative(4) }, Jump { location: 42 }, Mov { destination: Relative(2), source: Relative(3) }, Jump { location: 44 }, Mov { destination: Relative(1), source: Relative(2) }, Return, Const { destination: Direct(32772), bit_size: Integer(U32), value: 30720 }, BinaryIntOp { destination: Direct(32771), op: LessThan, bit_size: U32, lhs: Direct(0), rhs: Direct(32772) }, JumpIf { condition: Direct(32771), location: 51 }, IndirectConst { destination_pointer: Direct(1), bit_size: Integer(U64), value: 17843811134343075018 }, Trap { revert_data: HeapVector { pointer: Direct(1), size: Direct(2) } }, Return]"
  ],
  "debug_symbols": "nZLBisMgEIbfZc4eYhJ166uUEkxiiiAmWF1Ygu++Yxp300Oh5OLvzPj9M+CsMOo+3jvjpvkB8rpC74215t7ZeVDBzA6zK1T5oBwkJUDFJjXmahT6FEw2BJoaZIvSPOUCkqVEoHh1wWudrQ7m2HJRXrsA0kVrCXwrG7dHj0W5TYPyWK0IaDeiouFkrM63RP7p6j3a8J1t6z+YfUzT9rLjlLEzvCijU8FP8KxMz89ML8ROfzUv9A0jNRj/8tEp+3ijeqv3cIpuOFTDz1IqZVEWPw96jF5np8O24HltOWH0lnK3Xw==",
  "file_map": {
    "50": {
      "source": "fn main(c: u64) -> pub u64 {\n    if c == 1 {\n        if c == 2 {\n            c >> c\n        } else {\n            3\n        }\n    } else {\n        if c == 4 {\n            c >> c\n        } else {\n            5\n        }\n    }\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
