tooling/nargo_cli/tests/snapshots/execution_success/regression_9544/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: u64):
    (no terminator instruction)
}
[regression_9544] Circuit output: 5
